   will be matched to the peer with the matching callbackextension if it is
   available.

 * Two new NAT options, auto_force_rport and auto_comedia, have been added
   which set the force_rport and comedia options automatically if Asterisk
   detects that an incoming SIP request crossed a NAT after being sent by
   the remote endpoint.

 * NAT settings are now a combinable list of options. The equivalent of the
   deprecated nat=yes is nat=force_rport,comedia. nat=no behaves as before.

 * Adds an option send_diversion which can be disabled to prevent
   diversion headers from automatically being added to INVITE requests.

 * Add support for lightweight NAT keepalive. If enabled a blank packet will
   be sent to the remote host at a given interval to keep the NAT mapping open.
   This can be enabled using the keepalive configuration option.

 * Add option 'tonezone' to specify country code for indications.  This option
   can be set both globally and overridden for specific peers.

 * The SIP Security Events Framework now supports IPv6.

 * Add a new setting for directmedia, 'outgoing', to alleviate INVITE glares
   between multiple user agents. When set, for directmedia reinvites,
   Asterisk will not send an immediate reinvite on an incoming call leg. This
   option is useful when peered with another SIP user agent that is known to
   send immediate direct media reinvites upon call establishment.

 * Add support for WebSocket transport. This can be configured using 'ws' or 'wss'
   as the transport.

 * Add options subminexpiry and submaxexpiry to set limits of subscription
   timer independently from registration timer settings. The setting of the
   registration timer limits still is done by options minexpiry, maxexpiry
   and defaultexpiry. For backwards compatibility the setting of minexpiry
   and maxexpiry also is used to configure the subscription timer limits if
   subminexpiry and submaxexpiry are not set in sip.conf.
